// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should hide add button and edit menu when in readOnly mode 1`] = `
<div
  className="UserList"
>
  <div
    className="header"
  >
    <h1>
      Users and User Groups
    </h1>
    <div
      className="searchContainer"
    >
      <Icon
        className="searchIcon"
        type="search"
      />
      <ForwardRef(Input)
        className="searchInput"
        onChange={[Function]}
        onClear={[Function]}
        placeholder="Filter for user ID..."
        required={true}
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="content"
  >
    <ul>
      <ListItem
        className="user"
        key="USER:kermit"
      >
        <ListItemSection
          className="icon"
        >
          <ForwardRef(SvgUser) />
        </ListItemSection>
        <ListItemSection
          className="name"
        >
          <div
            className="type"
          >
            User
          </div>
          <div
            className="entityName"
          >
            kermit
          </div>
        </ListItemSection>
        <ListItemSection
          className="containedEntities"
        />
        <ListItemSection
          className="role"
        >
          Manager
        </ListItemSection>
      </ListItem>
    </ul>
  </div>
  <ConfirmationModal
    entityName={null}
    loading={false}
    onClose={[Function]}
    onConfirm={[Function]}
    open={null}
  />
  <AddUserModal
    onClose={[Function]}
    onConfirm={[Function]}
    open={false}
  />
</div>
`;

exports[`should match snapshot 1`] = `
<div
  className="UserList"
>
  <div
    className="header"
  >
    <h1>
      Users and User Groups
    </h1>
    <div
      className="searchContainer"
    >
      <Icon
        className="searchIcon"
        type="search"
      />
      <ForwardRef(Input)
        className="searchInput"
        onChange={[Function]}
        onClear={[Function]}
        placeholder="Filter for user ID..."
        required={true}
        type="text"
        value=""
      />
    </div>
    <ForwardRef(Button)
      onClick={[Function]}
    >
      Add
    </ForwardRef(Button)>
  </div>
  <div
    className="content"
  >
    <ul>
      <ListItem
        className="user"
        key="USER:kermit"
      >
        <ListItemSection
          className="icon"
        >
          <ForwardRef(SvgUser) />
        </ListItemSection>
        <ListItemSection
          className="name"
        >
          <div
            className="type"
          >
            User
          </div>
          <div
            className="entityName"
          >
            kermit
          </div>
        </ListItemSection>
        <ListItemSection
          className="containedEntities"
        />
        <ListItemSection
          className="role"
        >
          Manager
        </ListItemSection>
        <div
          className="contextMenu"
        >
          <Dropdown
            label={
              <Icon
                size="24px"
                type="overflow-menu-vertical"
              />
            }
          >
            <ForwardRef(DropdownOption)
              onClick={[Function]}
            >
              <Icon
                type="edit"
              />
              Edit
            </ForwardRef(DropdownOption)>
            <ForwardRef(DropdownOption)
              onClick={[Function]}
            >
              <Icon
                type="delete"
              />
              Delete
            </ForwardRef(DropdownOption)>
          </Dropdown>
        </div>
      </ListItem>
    </ul>
  </div>
  <ConfirmationModal
    entityName={null}
    loading={false}
    onClose={[Function]}
    onConfirm={[Function]}
    open={null}
  />
  <AddUserModal
    onClose={[Function]}
    onConfirm={[Function]}
    open={false}
  />
</div>
`;
